--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ junit = "4.13.2"
 coreTesting = "2.2.0"
 mockk = "1.13.11"
 playServicesMaps = "19.1.0"
+testing = "1.3.0"
 turbine = "1.2.0"
 junitAndroid = "1.2.1"
 espressoCore = "3.6.1"
@@ -90,6 +91,7 @@ mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 mockk-android = { module = "io.mockk:mockk-android", version.ref = "mockk" }
 turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
 androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
+livedata-testing = { module = "com.jraska.livedata:testing", version.ref = "testing" }
 
 [plugins]
 
