--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ lifecycle = "2.8.7"
 composeBom = "2025.02.00"
 activityCompose = "1.10.1"
 mapsCompose = "4.0.0"
+materialIconsExtended = "1.7.8"
 navigationCompose = "2.8.8"
 
 # Testing
@@ -58,6 +59,7 @@ androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "u
 androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-compose-lifecycle = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycle" }
 androidx-compose-navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
+androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 androidx-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4" }
 
 # Hilt
